internship-tasks/practicals/kubernetes/Task-2-39/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-2-39-nginx-deployment
  namespace: ayoob-k-ibrahim
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-2-39-nginx
  template:
    metadata:
      labels:
        app: task-2-39-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
