internship-tasks/practicals/kubernetes/Task-2-39/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-2-39-ingress
  namespace: ayoob-k-ibrahim
spec:
  ingressClassName: nginx
  rules:
  - host: demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-2-39-nginx-service
            port:
              number: 80
